<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FourthFragment">

    <TextView
        android:id="@+id/text_view_fourth_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_4"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/masukan_usia"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="age"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_text_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/masukan_alamat"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="address"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_text_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/masukan_pekerjaan"
        app:layout_constraintBottom_toTopOf="@+id/button_fourth_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="job"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/button_fourth_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_screen_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_fourth_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>